evidencias de carga academica

--- a/IngenieriaMateriales/presentaciones/seleccionMaterial_v1.html
+++ b/IngenieriaMateriales/presentaciones/seleccionMaterial_v1.html
@@ -243,8 +243,146 @@
 
         <div class="absolute bottom-8 right-8 z-10 text-slate-500 text-2xl font-bold">04</div>
     </div>
-
 </div>
+ <!-- === DIAPOSITIVA 5: METALES === -->
+    <div id="slide-5" class="slide w-full h-screen flex flex-col md:flex-row">
+        <div class="w-full md:w-1/2 h-1/3 md:h-full bg-cover bg-center relative" style="background-image: url('https://images.unsplash.com/photo-1581092913445-06e1b1173518?q=80&w=2070&auto=format&fit=crop&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');">
+            <div class="absolute inset-0 bg-gradient-to-t from-slate-950 via-slate-950/80 to-transparent"></div>
+        </div>
+        <div class="w-full md:w-1/2 h-2/3 md:h-full bg-slate-950 flex flex-col justify-center p-8 lg:p-16">
+            <div class="max-w-md mx-auto md:mx-0">
+                <div class="fade-in">
+                    <h2 class="text-sky-400 text-lg font-semibold mb-2">Familia 1</h2>
+                    <h1 class="text-4xl md:text-5xl font-bold text-white mb-6">Metales</h1>
+                    <p class="text-slate-300 mb-8">Los pilares de la industria. Conocidos por su alta resistencia, rigidez y capacidad para deformarse sin romperse (ductilidad).</p>
+                </div>
+                <div class="space-y-6">
+                    <div class="fade-in" style="animation-delay: 0.3s;">
+                        <h3 class="text-xl font-bold text-white mb-3 flex items-center"><svg class="h-6 w-6 text-green-400 mr-3" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M12 9v6m3-3H9m12 0a9 9 0 11-18 0 9 9 0 0118 0z" /></svg>Puntos Fuertes</h3>
+                        <ul class="list-disc list-inside text-slate-400 space-y-2 pl-2">
+                            <li>Alta rigidez (<span class="font-medium text-sky-400">E ≈ 100 GPa</span>) y tenacidad.</li>
+                            <li>Dúctiles y fácilmente moldeables.</li>
+                            <li>Buena conductividad térmica y eléctrica.</li>
+                        </ul>
+                    </div>
+                    <div class="fade-in" style="animation-delay: 0.5s;">
+                        <h3 class="text-xl font-bold text-white mb-3 flex items-center"><svg class="h-6 w-6 text-red-400 mr-3" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M15 12H9m12 0a9 9 0 11-18 0 9 9 0 0118 0z" /></svg>Debilidades</h3>
+                        <ul class="list-disc list-inside text-slate-400 space-y-2 pl-2">
+                            <li>Susceptibles a la corrosión.</li>
+                            <li>Relativamente pesados.</li>
+                            <li>Baja resistencia a la fatiga en estado puro.</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="absolute bottom-8 right-8 z-10 text-slate-500 text-2xl font-bold">05</div>
+    </div>
+
+    <!-- === DIAPOSITIVA 6: CERÁMICOS === -->
+    <div id="slide-6" class="slide w-full h-screen flex flex-col md:flex-row-reverse">
+        <div class="w-full md:w-1/2 h-1/3 md:h-full bg-cover bg-center relative" style="background-image: url('https://images.unsplash.com/photo-1618498188055-239645524f30?q=80&w=2070&auto=format&fit=crop&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');">
+            <div class="absolute inset-0 bg-gradient-to-t from-slate-950 via-slate-950/80 to-transparent"></div>
+        </div>
+        <div class="w-full md:w-1/2 h-2/3 md:h-full bg-slate-950 flex flex-col justify-center p-8 lg:p-16">
+            <div class="max-w-md mx-auto md:mx-0 md:ml-auto md:text-right">
+                <div class="fade-in">
+                    <h2 class="text-sky-400 text-lg font-semibold mb-2">Familia 2</h2>
+                    <h1 class="text-4xl md:text-5xl font-bold text-white mb-6">Cerámicos</h1>
+                    <p class="text-slate-300 mb-8">Materiales de extrema dureza y resistencia a altas temperaturas, ideales para condiciones de servicio severas.</p>
+                </div>
+                <div class="space-y-6">
+                    <div class="fade-in" style="animation-delay: 0.3s;">
+                        <h3 class="text-xl font-bold text-white mb-3 flex items-center md:justify-end"><svg class="h-6 w-6 text-green-400 mr-3 md:mr-0 md:ml-3 md:order-2" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M12 9v6m3-3H9m12 0a9 9 0 11-18 0 9 9 0 0118 0z" /></svg>Puntos Fuertes</h3>
+                        <ul class="list-disc list-inside text-slate-400 space-y-2 pl-2 md:pl-0 md:pr-2 text-left md:text-right">
+                            <li>Muy alta rigidez (<span class="font-medium text-sky-400">E ≈ 200 GPa</span>) y dureza.</li>
+                            <li>Excelente resistencia a la corrosión y al desgaste.</li>
+                            <li>Alto punto de fusión, estables a altas temperaturas.</li>
+                        </ul>
+                    </div>
+                    <div class="fade-in" style="animation-delay: 0.5s;">
+                        <h3 class="text-xl font-bold text-white mb-3 flex items-center md:justify-end"><svg class="h-6 w-6 text-red-400 mr-3 md:mr-0 md:ml-3 md:order-2" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M15 12H9m12 0a9 9 0 11-18 0 9 9 0 0118 0z" /></svg>Debilidades</h3>
+                        <ul class="list-disc list-inside text-slate-400 space-y-2 pl-2 md:pl-0 md:pr-2 text-left md:text-right">
+                            <li>Muy baja tenacidad (frágiles).</li>
+                            <li>Difíciles de fabricar y dar forma.</li>
+                            <li>Débil resistencia al choque térmico.</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="absolute bottom-8 right-8 z-10 text-slate-500 text-2xl font-bold">06</div>
+    </div>
+
+    <!-- === DIAPOSITIVA 7: POLÍMEROS === -->
+    <div id="slide-7" class="slide w-full h-screen flex flex-col md:flex-row">
+        <div class="w-full md:w-1/2 h-1/3 md:h-full bg-cover bg-center relative" style="background-image: url('https://images.unsplash.com/photo-1621495048225-5eb1a71f385c?q=80&w=2070&auto=format&fit=crop&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');">
+            <div class="absolute inset-0 bg-gradient-to-t from-slate-950 via-slate-950/80 to-transparent"></div>
+        </div>
+        <div class="w-full md:w-1/2 h-2/3 md:h-full bg-slate-950 flex flex-col justify-center p-8 lg:p-16">
+            <div class="max-w-md mx-auto md:mx-0">
+                <div class="fade-in">
+                    <h2 class="text-sky-400 text-lg font-semibold mb-2">Familia 3</h2>
+                    <h1 class="text-4xl md:text-5xl font-bold text-white mb-6">Polímeros</h1>
+                    <p class="text-slate-300 mb-8">Los materiales más versátiles. Desde plásticos de uso diario hasta elastómeros y resinas de alta tecnología.</p>
+                </div>
+                <div class="space-y-6">
+                    <div class="fade-in" style="animation-delay: 0.3s;">
+                        <h3 class="text-xl font-bold text-white mb-3 flex items-center"><svg class="h-6 w-6 text-green-400 mr-3" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M12 9v6m3-3H9m12 0a9 9 0 11-18 0 9 9 0 0118 0z" /></svg>Puntos Fuertes</h3>
+                        <ul class="list-disc list-inside text-slate-400 space-y-2 pl-2">
+                            <li>Muy ligeros y de baja densidad.</li>
+                            <li>Excelente resistencia a la corrosión.</li>
+                            <li>Fáciles de moldear en formas complejas.</li>
+                        </ul>
+                    </div>
+                    <div class="fade-in" style="animation-delay: 0.5s;">
+                        <h3 class="text-xl font-bold text-white mb-3 flex items-center"><svg class="h-6 w-6 text-red-400 mr-3" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M15 12H9m12 0a9 9 0 11-18 0 9 9 0 0118 0z" /></svg>Debilidades</h3>
+                        <ul class="list-disc list-inside text-slate-400 space-y-2 pl-2">
+                            <li>Baja rigidez (<span class="font-medium text-sky-400">E ≈ 2 GPa</span>) y resistencia mecánica.</li>
+                            <li>Baja temperatura de servicio (<span class="font-medium text-sky-400">Tg ≈ 100°C</span>).</li>
+                            <li>Susceptibles a la degradación por UV.</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="absolute bottom-8 right-8 z-10 text-slate-500 text-2xl font-bold">07</div>
+    </div>
+    
+    <!-- === DIAPOSITIVA 8: COMPUESTOS === -->
+    <div id="slide-8" class="slide w-full h-screen flex flex-col md:flex-row-reverse">
+        <div class="w-full md:w-1/2 h-1/3 md:h-full bg-cover bg-center relative" style="background-image: url('https://images.unsplash.com/photo-1603898039423-86d1a0b67364?q=80&w=2070&auto=format&fit=crop&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');">
+            <div class="absolute inset-0 bg-gradient-to-t from-slate-950 via-slate-950/80 to-transparent"></div>
+        </div>
+        <div class="w-full md:w-1/2 h-2/3 md:h-full bg-slate-950 flex flex-col justify-center p-8 lg:p-16">
+            <div class="max-w-md mx-auto md:mx-0 md:ml-auto md:text-right">
+                <div class="fade-in">
+                    <h2 class="text-sky-400 text-lg font-semibold mb-2">Familia 4</h2>
+                    <h1 class="text-4xl md:text-5xl font-bold text-white mb-6">Compuestos</h1>
+                    <p class="text-slate-300 mb-8">Materiales de alto rendimiento diseñados a la carta, combinando las mejores propiedades de diferentes familias.</p>
+                </div>
+                <div class="space-y-6">
+                    <div class="fade-in" style="animation-delay: 0.3s;">
+                        <h3 class="text-xl font-bold text-white mb-3 flex items-center md:justify-end"><svg class="h-6 w-6 text-green-400 mr-3 md:mr-0 md:ml-3 md:order-2" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M12 9v6m3-3H9m12 0a9 9 0 11-18 0 9 9 0 0118 0z" /></svg>Puntos Fuertes</h3>
+                        <ul class="list-disc list-inside text-slate-400 space-y-2 pl-2 md:pl-0 md:pr-2 text-left md:text-right">
+                            <li>Excelente relación rigidez/peso y resistencia/peso.</li>
+                            <li>Alta resistencia a la fatiga.</li>
+                            <li>Propiedades personalizables según la aplicación.</li>
+                        </ul>
+                    </div>
+                    <div class="fade-in" style="animation-delay: 0.5s;">
+                        <h3 class="text-xl font-bold text-white mb-3 flex items-center md:justify-end"><svg class="h-6 w-6 text-red-400 mr-3 md:mr-0 md:ml-3 md:order-2" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M15 12H9m12 0a9 9 0 11-18 0 9 9 0 0118 0z" /></svg>Debilidades</h3>
+                        <ul class="list-disc list-inside text-slate-400 space-y-2 pl-2 md:pl-0 md:pr-2 text-left md:text-right">
+                            <li>Coste de fabricación muy elevado.</li>
+                            <li>Procesos de moldeo y reparación complejos.</li>
+                            <li>Propiedades direccionales (anisotropía).</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="absolute bottom-8 right-8 z-10 text-slate-500 text-2xl font-bold">08</div>
+    </div>
 
 </body>
 </html>
